Allow for daylight savings to be ignored when reading from the NWIS Daily Values web service, #258.